# gemini-video-dubber

./: .gitignore  README.md  development.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
pyinstaller/: macos.spec  windows.spec
scripts/: build_macos.sh  build_windows.ps1
src/gemini_video_dubber/: __main__.py  app.py  gemini_live_translate.py  gui.py  jobs.py  languages.py  media.py  packaging.py  settings.py  subtitles.py
tests/: test_integration_gemini.py  test_jobs.py  test_media.py  test_subtitles.py
