[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-video-dubber"
version = "0.1.0"
description = "Desktop app for dubbing video audio with Gemini Live Translate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-genai==2.10.0",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
  "pyinstaller==6.21.0",
  "pyinstaller-hooks-contrib==2026.6",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.19",
]

[project.scripts]
gemini-video-dubber = "gemini_video_dubber.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP007", "UP035", "UP045"]
